--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -268,6 +268,10 @@
             cursor: pointer;
             font-weight: bold;
             text-transform: uppercase;
+
+            &:hover{
+              box-shadow: 0 2px 10px rgba($cyan, $alpha: 0.5);
+            }
           }
         }
       }
