--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,9 +1,3 @@
-.footer.active{
-    background: rgba($default, $alpha: 0.3);
-    h2, p{
-        color: $white;
-    }
-}
 .footer{
     display: flex;
     justify-content: center;
@@ -69,13 +63,11 @@
     }
 }
 
-.thanks{
-    width: 100%;
-    padding: 0.5rem 0;
-    margin: 0.5rem 0;
-    text-align: center;
-    font-size: 18px;
-    a{
-        color: $purple;
+body.active{
+    .footer{
+        background: rgba($default, $alpha: 0.3);
+        h2, p{
+            color: $white;
+        }
     }
 }
