--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,7 +4,7 @@
 @import 'navigation';
 @import 'header';
 @import 'about';
-@import 'education';
+@import 'avis';
 @import 'skillest';
 @import 'services';
 @import 'experience';
