--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -18,15 +18,15 @@
     font-size: 35px;
     color: $gray-dark;
   }
-  &-logo.active-mode {
-    color: $white;
-  }
   &-page {
     display: flex;
     grid-area: 1 / 5 / 2 / 7;
     li {
       padding: 1rem;
       transition: all 0.3s ease;
+      a{
+        font-weight: 400;
+      }
       &:hover {
         transform: translateX(2px);
         color: $primary;
@@ -133,6 +133,9 @@
       li {
         padding: 0.75rem;
         transition: all 0.3s ease;
+        a{
+          font-weight: 400;
+        }
         ion-icon {
           font-size: 25px;
           &:hover {
@@ -146,21 +149,30 @@
         }
       }
     }
-    &-menu.active-mode {
-      background: $gray-dark;
-    }
     &-menu.active {
       transform: translateX(0);
     }
     &-logo {
       margin: 1rem;
     }
-    &-logo.active-mode {
-      color: $white;
-    }
   }
 }
 
 .navigation.fixed {
   transform: translateY(-100%);
+}
+
+body.active{
+  .navigation{
+    background-color: $dark;
+    &-logo {
+      color: $white;
+    }
+    &-menu{
+      background: $gray-dark;
+      &-logo {
+        color: $white;
+      }
+    }
+  }
 }
