--- a/styles/other.scss
+++ b/styles/other.scss
@@ -1,25 +1,8 @@
-.other.active {
-  h1 {
-    color: $purple;
-  }
-
-  h2 {
-    color: $light;
-  }
-
-  .oc-cert {
-    span {
-      color: $white;
-    }
-  }
-}
-
 .other {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  min-height: 100vh;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 
   &-container {
     width: 75%;
@@ -39,9 +22,9 @@
 
     h2 {
       text-align: center;
-      color: $default;
-      font-family: "Roboto";
-      font-weight: 500;
+      color: rgba($color: $default, $alpha: 0.8);
+      font-family: "Overpass", sans-serif;
+      font-weight: 400;
 
       i {
         font-size: 18px;
@@ -69,43 +52,31 @@
         align-items: center;
         flex-wrap: wrap;
         margin-bottom: 2.5rem;
+        gap: 20px;
 
         a {
-          position: relative;
           width: 48%;
-          padding: 5px;
+        }
+
+        &-card {
+          width: 100%;
           display: flex;
           justify-content: center;
           align-items: center;
-          flex-direction: column;
-
-          img {
-            height: 100%;
-            width: 100%;
-            transition: opacity 0.3s ease;
-            border-radius: 10px;
-          }
-
+          border: 2px dotted $default;
+          border-radius: 5px;
+          padding: 15px 0;
+          background: rgba($color: $default, $alpha: 0.05);
+          transition: 0.3s ease;
           span {
-            position: absolute;
-            transform: translateY(150px);
-            color: $gray-dark;
-            font-weight: bold;
-            text-align: center;
-            opacity: 0;
-            font-size: 20px;
-            transition: 0.3s;
+            color: $default;
+            font-weight: 600;
+            font-size: 18px;
           }
-
-          &:hover img {
-            opacity: 0.08;
+          &:hover {
+            background: rgba($color: $default, $alpha: 0.1);
           }
         }
-      }
-
-      a:hover span {
-        transform: translateY(0px);
-        opacity: 1;
       }
     }
 
@@ -113,121 +84,36 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
+      border-radius: 5px;
+      box-shadow: 0px 0px 10px rgba($color: $default, $alpha: 0.1);
 
-      h1 {
-        margin-bottom: 1.5rem;
-      }
-
-      h2 {
-        margin-bottom: 1.5rem;
-      }
-
-      div {
+      .contact-card {
+        padding: 15px 20px;
         display: flex;
-        justify-content: center;
         align-items: center;
-        margin-bottom: 2rem;
-
-        a {
-          button {
-            border-radius: 10px;
-            outline: none;
-            padding: 1rem 1.5rem;
-            border: 2px solid $indigo;
-            background: $white;
-            color: $indigo;
-            font-weight: bold;
-            cursor: pointer;
-
-            &:hover {
-              background: rgba($color: $indigo, $alpha: 0.05);
-            }
+        img {
+          width: 50px;
+          height: 50px;
+          margin-right: 10px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+        .card-text {
+          display: flex;
+          align-items: center;
+          a {
+            background: $primary;
+            color: $white;
+            border-radius: 5px;
+            margin-right: 5px;
+            font-weight: 500;
+            padding: 8px 14px;
           }
-        }
-      }
-
-      .other-freelance {
-        a {
-          width: 53px;
-          height: 53px;
-          margin: 0 1rem;
-
-          img {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            object-fit: cover;
-          }
-        }
-
-        a:first-child {
-          width: 60px;
-          height: 60px;
-        }
-      }
-    }
-
-    &-cv {
-      position: relative;
-      width: 100%;
-      padding: 0.5rem;
-      margin: 1rem;
-      text-align: center;
-      color: $white;
-      background: $primary;
-      transition: transform 0.3s ease;
-
-      &:hover {
-        transform: translateY(5px);
-      }
-
-      &::before {
-        content: "•";
-        position: absolute;
-        color: $white;
-        font-size: 20px;
-        top: 5px;
-        left: 5px;
-        transition: transform 0.3s ease;
-      }
-
-      &:hover::before {
-        -webkit-animation: hover_cv 0.3s infinite;
-        animation: hover_cv 0.3s infinite;
-      }
-
-      @-webkit-keyframes hover_cv {
-        0% {
-          transform: translateY(0);
-        }
-
-        50% {
-          transform: translateY(-10px);
-        }
-
-        100% {
-          transform: translateY(10px);
-        }
-      }
-
-      @keyframes hover_cv {
-        0% {
-          transform: translateY(0);
-        }
-
-        50% {
-          transform: translateY(-10px);
-        }
-
-        100% {
-          transform: translateY(10px);
         }
       }
     }
   }
 }
-
 
 @media screen and (max-width: 850px) {
   .other {
@@ -244,13 +130,11 @@
         }
       }
     }
-
   }
 }
 
 @media screen and (max-width: 580px) {
   .other {
-
     &-container {
       &-certification {
         .cert {
@@ -258,6 +142,37 @@
             width: 95%;
           }
         }
+      }
+    }
+  }
+}
+
+body.active {
+  .other {
+    &-container {
+      h1 {
+        color: $purple;
+      }
+      h2 {
+        color: $light;
+      }
+      &-certification {
+        .cert {
+          &-card {
+            border: 2px dotted $light;
+            background: rgba($color: $default, $alpha: 0.5);
+            span {
+              color: $light;
+            }
+            &:hover {
+              background: rgba($color: $default, $alpha: 0.1);
+            }
+          }
+        }
+      }
+  
+      &-contact {
+        box-shadow: none;
       }
     }
   }
