--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Poppins:wght@300;400;500;600;700;800;900&family=Grey+Qo&family=Parisienne&family=Roboto:wght@300;400&family=Ubuntu:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Whisper&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 $indigo: #5603ad;
 $purple: #8965e0;
@@ -66,9 +67,6 @@ body::-webkit-scrollbar-thumb {
 
 body.active{
     background-color: $dark;
-    .navigation{
-        background-color: $dark;
-    }
     .card-don{
         h2{
             color: $gray-dark;
