--- a/styles/services.scss
+++ b/styles/services.scss
@@ -39,6 +39,7 @@
         flex-direction: column;
         width: 45%;
         margin: 1rem;
+        background: $white;
         border-radius: 3px;
         overflow: hidden;
         box-shadow: 0 2px 10px rgba($dark, $alpha: 0.2);
@@ -116,7 +117,7 @@
   }
 }
 
-body.active {
+body.dark-mode {
   .services {
     h1 {
       color: $purple;
