--- a/styles/about.scss
+++ b/styles/about.scss
@@ -15,6 +15,9 @@
     color: $default;
     font-family: "Roboto";
     font-weight: 300;
+    b{
+      font-weight: 500;
+    }
   }
   &-about.active {
     color: $white;
