--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -6,8 +6,9 @@
   grid-row-gap: 10px;
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
+  // left: 0;
+  // right: 0;
+  width: 100%;
   transition: 0.3s;
   z-index: 5;
   background: $white;
