--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -4,6 +4,7 @@
   align-items: flex-start;
   margin-bottom: 5rem;
   position: relative;
+  overflow: hidden;
   .rotate-card{
     background: linear-gradient(to right, $danger, $warning);
     position: absolute;
@@ -12,7 +13,7 @@
     align-items: center;
     width: 600px;
     height: 600px;
-    top: -150px;
+    top: 10px;
     right: -100px;
     border-radius: 50%;
     animation: rotate 5s infinite;
@@ -23,6 +24,15 @@
       border-radius: 50%;
       background: $white;
     }
+  }
+  .rotate-card.down{
+    background: linear-gradient(to bottom, $warning, $danger);
+    width: 1000px;
+    height: 1000px;
+    bottom: 100px;
+    left: -200px;
+    right: auto;
+    top: auto;
   }
   @keyframes rotate {
     0% {
