--- a/styles/other.scss
+++ b/styles/other.scss
@@ -4,6 +4,7 @@
   align-items: flex-start;
   margin-bottom: 3rem;
   position: relative;
+  overflow: hidden;
   .rotate-card{
     background: linear-gradient(to right, $cyan, $info);
     position: absolute;
@@ -13,7 +14,7 @@
     width: 300px;
     height: 300px;
     top: 0;
-    right: 50%;
+    left: 50%;
     transform: translateY(-50%);
     border-radius: 50%;
     animation: rotate 5s infinite;
