--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -28,6 +28,7 @@ $darker: black;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     color: $gray;
+    font-display: swap;
     font-weight: 300;
     margin: 0;
     padding: 0;
