--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -214,8 +214,8 @@
         margin: 0.5rem;
 
         img {
-          width: 500px;
-          height: auto;
+          // width: 500px;
+          // height: auto;
           border-radius: 5px;
           object-fit: cover;
           overflow: hidden;
