--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -213,8 +213,8 @@
       a {
         margin: 0.5rem;
         img {
-          // width: 500px;
-          // height: auto;
+          width: 500px;
+          height: auto;
           border-radius: 5px;
           object-fit: cover;
           overflow: hidden;
