Ajout de la progress bar

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     background: $gray-white;
+    height: 100vh;
     &-container{
         display: flex;
         justify-content: center;
