--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -78,3 +78,16 @@ body.dark-mode{
     }
 }
 
+.scroll-indicator{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 5px;
+    border-radius: 20px;
+    transform-origin: left;
+    transform: scaleX(0);
+    background: linear-gradient(to right, $info, $cyan);
+    transition: transform .2s ease-out;
+    z-index: 6;
+}
+
