maj curseur perso

--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -46,9 +46,9 @@ img{
     height: auto;
 }
 
-html {
-    cursor: none;
-}
+// html {
+//     cursor: none;
+// }
 
 body{
     position: relative;
