add custom cursor

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,7 +2,7 @@
 @import './base/fonts';
 @import './base/reset';
 
+@import './components/cursor';
 @import './components/header';
-@import './components/footer';
 
 @import './pages/home';
