--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,3 +6,7 @@
 @import './components/header';
 
 @import './pages/home';
+@import './pages/about';
+@import './pages/contact';
+@import './pages/experience';
+@import './pages/skills';
