--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -82,8 +82,21 @@ th {
   padding: 0;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-
+/* Make clicks pass-through */
+#nprogress {
+  pointer-events: none;
+}
+#nprogress .bar {
+  background: $primary;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3.5px;
+  border-radius: 0 0 5px 5px;
+}
