add splash screen

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,6 +4,7 @@
 
 @import './components/cursor';
 @import './components/header';
+@import './components/loader';
 
 @import './pages/home';
 @import './pages/about';
