init header style

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -1,6 +1,6 @@
 $light: #fff;
-$primary: #0f172a;
-$secondary: #94a3b8;
+$primary: #222222;
+$secondary: #a7a7a7;
 
 $font-primary: "Satoshi", sans-serif;
 $font-secondary: "Clash Display", sans-serif;
