--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -10,15 +10,15 @@
   &__lines {
     position: absolute;
     inset: 0;
-    mask-image: linear-gradient(to bottom, transparent, black);
-    -webkit-mask-image: linear-gradient(to bottom, transparent, black);
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='30' height='30' fill='none' stroke='rgb(15 23 42 / .075)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+    mask-image: linear-gradient(to top, transparent, black, black);
+    -webkit-mask-image: linear-gradient(to top, transparent, black, black);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='30' height='30' fill='none' stroke='rgb(15 23 42 / 0.04)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
     background-position: bottom 1px center;
     background-color: rgb(255 255 255/0.25);
   }
   &__container {
     z-index: 2;
-    padding: 0 1rem 0 1rem;
+    padding: 0 1rem 2rem 1rem;
     width: 100%;
     max-width: 58rem;
     display: flex;
@@ -53,6 +53,8 @@
         letter-spacing: inherit;
 
         color: $primary;
+
+        cursor: help;
         &::selection {
           background: $primary;
           color: $light;
@@ -76,20 +78,21 @@
       line-height: 1.5;
       color: $primary;
       text-align: center;
-      padding: .375rem 0 1.5rem 0;
+      padding: 0.375rem 0 1.5rem 0;
       span {
         font-size: inherit;
         font-weight: inherit;
       }
     }
 
-    a{
+    a {
       display: flex;
       align-items: center;
-      gap: .25rem;
+      gap: 0.25rem;
 
       span {
         color: $primary;
+        font-weight: 400;
       }
     }
   }
