--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -33,7 +33,7 @@
         span {
           font-size: .875rem;
           font-weight: 600;
-          color: $secondary;
+          color: $light;
         }
   
         &.active {
