--- a/styles/components/loader.scss
+++ b/styles/components/loader.scss
@@ -10,7 +10,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
-  transition: all .5s ease-in-out;
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
 }
 .loader {
   display: flex;
@@ -19,7 +19,7 @@
   animation: bullet-animation 1s ease-in-out 2s infinite alternate;
 
   svg {
-    animation: fill-animation .5s forwards 1s;
+    animation: fill-animation 0.5s forwards 1s;
     path {
       stroke-dasharray: 572;
       stroke-dashoffset: 572;
@@ -35,10 +35,10 @@
     }
   }
   @keyframes fill-animation {
-  from {
+    from {
       fill: transparent;
     }
-   to {
+    to {
       fill: $light;
     }
   }
